tests/golden/cluster-baseline/extras.yaml
---
# Source: cluster-baseline/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-default-deny
  namespace: example-app
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: example-dns
          podSelector:
            matchLabels:
              app: "example-dns"
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
# Source: cluster-baseline/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-default-deny
  namespace: example-data
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
# Source: cluster-baseline/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-sealed-deny
  namespace: example-sealed
spec:
  podSelector: {}
  policyTypes:
    - Egress
